--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.DS_Store
 HELP.md
 .gradle
 build/
@@ -25,6 +26,7 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+application-security.properties
 
 ### NetBeans ###
 /nbproject/private/
@@ -35,3 +37,4 @@ out/
 
 ### VS Code ###
 .vscode/
+
