--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+#hibernate logging
+logging.level.org.hibernate = info
 
+#application-security.properties? .gitignore? ??
+spring.profiles.include=security
