--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 application-security.properties
-
+!**/main/java/com/example/evision/config/WebConfig.java
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
