--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,17 @@ jobs:
       with:
         distribution: 'temurin'
         java-version: '11'
-
+        
+    # create application-secret.yml
+    - name: Create application-secret.yml
+      run: |
+        # application-secret.yml 생성
+        touch ./src/main/resources/application-secret.properties
+        
+        # Secrets의 APPLICATION_SECRET 값을 application-secret.yml에 쓰기
+        echo "${{ secrets.APPLICATION_SECRET }}" > ./src/main/resources/application-secret.properties
+      shell: bash
+      
     # (3) Gradle build (Test 제외)
     - name: Build with Gradle
       uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
