--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,8 +63,8 @@ jobs:
     - name: Web Docker Build & Push
       run: |
         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-        docker build -t ${{ secrets.DOCKER_REPO }} .
-        docker push ${{ secrets.DOCKER_REPO }}
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/evision-server .
+        docker push ${{ secrets.DOCKER_USERNAME }}/evision-server
 
 #     # Github Action IP 가져오기
 #     - name: Get Github Actions IP
