--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,18 +66,17 @@ jobs:
         docker build -t ${{ secrets.DOCKER_USERNAME }}/evision-server .
         docker push ${{ secrets.DOCKER_USERNAME }}/evision-server
 
-#     # Github Action IP 가져오기
-#     - name: Get Github Actions IP
-#       id: ip
-#       uses: haythem/public-ip@v1.3
+    # Github Action IP 가져오기
+    - name: Get Github Actions IP
+      id: ip
+      uses: haythem/public-ip@v1.3
       
-#     # EC2
-#     - name: Configure AWS Credentials
-#       uses: aws-actions/configure-aws-credentials@v1
-#       with:
-#         aws-access-key-id: ${{ secrets.AWS_EC2_ACCESS_KEY_ID }}
-#         aws-secret-access-key: ${{ secrets.AWS_EC2_SECRET_ACCESS_KEY }}
-#         aws-region: ap-northeast-2
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }} 
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
+        aws-region: ${{ secrets.AWS_REGION }} 
 
 #     # 보안 그룹에 ip 추가
 #     - name: Add Github Actions IP to Security group
