--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 application-security.properties
-src/main/java/com/example/evision/config
+#src/main/java/com/example/evision/config
 
 ### NetBeans ###
 /nbproject/private/
