--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,14 @@ on:
     branches:
       - main
 
+# 본인이 설정한 값을 여기서 채워넣습니다.
+# 리전, 버킷 이름, CodeDeploy 앱 이름, CodeDeploy 배포 그룹 이름
+env:
+  AWS_REGION: ap-northeast-2
+  S3_BUCKET_NAME: evision-github-actions-s3-bucket
+  CODE_DEPLOY_APPLICATION_NAME: my-codedeploy-app
+  CODE_DEPLOY_DEPLOYMENT_GROUP_NAME: my-codedeploy-deployment-group
+  
 permissions:
   contents: read
 
@@ -25,17 +33,6 @@ jobs:
       with:
         distribution: 'temurin'
         java-version: '11'
-        
-    # 그래들 캐싱
-    - name: Gradle Caching
-      uses: actions/cache@v3
-      with:
-        path: |
-          ~/.gradle/caches
-          ~/.gradle/wrapper
-        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-        restore-keys: |
-          ${{ runner.os }}-gradle-
           
     # create application-secret.yml
     - name: Create application-secret.properties
@@ -46,29 +43,38 @@ jobs:
         # Secrets의 APPLICATION_SECRET 값을 application-secret.yml에 쓰기
         echo "${{ secrets.APPLICATION_SECRET }}" > ./src/main/resources/application-secret.properties
       shell: bash
+
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
       
-    # (3) Gradle build
+    # (3) Gradle build (Test 제외)
     - name: Build with Gradle
-      run: ./gradlew bootJar
-
-    # Docker Image Build
-    - name: Web Docker Build & Push
-      run: |
-        docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-        docker build --platform linux/amd64 -t ${{ secrets.DOCKER_USERNAME }}/evision-server .
-        docker push ${{ secrets.DOCKER_USERNAME }}/evision-server
-
-    # EC2 접속 & Pull & 실행
-    - name: EC2 Docker Run
-      uses: appleboy/ssh-action@master
+      uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
       with:
-        host: ${{ secrets.EC2_HOST }}
-        username: ubuntu
-        key: ${{ secrets.EC2_KEY }}
-        port: 22
-        script: |
-          sudo docker stop $(sudo docker ps -a -q)
-          sudo docker rm $(sudo docker ps -a -q -f status=exited)
-          sudo docker rmi $(sudo docker images -q)
-          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/evision-server
-          sudo docker run -d -p 8080:8080 ${{ secrets.DOCKER_USERNAME }}/evision-server
+        arguments: clean build -x test
+
+    # (4) AWS 인증 (IAM 사용자 Access Key, Secret Key 활용)
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ env.AWS_REGION }}
+
+    # (5) 빌드 결과물을 S3 버킷에 업로드
+    - name: Upload to AWS S3
+      run: |
+        aws deploy push \
+          --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME }} \
+          --ignore-hidden-files \
+          --s3-location s3://$S3_BUCKET_NAME/$GITHUB_SHA.zip \
+          --source .
+
+    # (6) S3 버킷에 있는 파일을 대상으로 CodeDeploy 실행
+    - name: Deploy to AWS EC2 from S3
+      run: |
+        aws deploy create-deployment \
+          --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME }} \
+          --deployment-config-name CodeDeployDefault.AllAtOnce \
+          --deployment-group-name ${{ env.CODE_DEPLOY_DEPLOYMENT_GROUP_NAME }} \
+          --s3-location bucket=$S3_BUCKET_NAME,key=$GITHUB_SHA.zip,bundleType=zip
